# KoeMorph

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  EGEMAPS_SETUP.md  EMOTION_SETUP.md  LICENSE  README.ja.md  README.md  debug_feature_shapes.py  monitor_weights.py  pyproject.toml  simple_train_test.py  test_egemaps_comparison.py  test_emotion_processing.py  test_realtime_dual_stream.py
.claude/: settings.local.json
.github/workflows/: ci.yaml
configs/: config.yaml  dual_stream_config.yaml
configs/data/: default.yaml  koemorph_v2.yaml
configs/experiment/: dual_stream_60fps.yaml
configs/model/: default.yaml  dual_stream.yaml  dual_stream_60fps.yaml
configs/training/: default.yaml
docs/: README.md  emotion_stream_solution.md  enhanced_dual_stream_architecture.md  experimental_results.md  new_data_format_guide.md  paper_writing_guide.md  related_work_citations.md  research_contributions.md  technical_specifications.md
docs/training_process/: 00_index.md  01_data_loading.md  02_batch_creation.md  03_audio_feature_extraction.md  04_model_forward_pass.md  05_loss_calculation.md  06_backpropagation.md  07_parameter_update.md  08_metrics_calculation.md  09_logging.md  10_checkpointing.md
logs/emotion_monitor/: report_1753442929.md  report_1753443025.md  report_1753443149.md
scripts/: convert_livelink_data.py  export_model.py  rt.py  rt_simplified.py  test_audio_devices.py  test_model.py
src/: __init__.py  train.py  train_dual_stream.py  train_sequential.py
src/data/: adaptive_sequential_dataset.py  dataset.py  io.py  koemorph_datamodule.py  koemorph_dataset.py  sequential_dataset.py
tests/: conftest.py
(+30 files in other folders)
