[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian-face"
version = "0.1.0"
description = "ARKit Blendshape Generation with Multi-Stream Audio Cross-Attention"
authors = [{name = "Gaussian Face Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "hydra-core>=1.3.0",
    "numpy>=1.21.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
emotion2vec = [
    "transformers>=4.30.0",
    "fairseq>=0.12.0",
]
realtime = [
    "pyaudio>=0.2.11",
    "python-osc>=1.8.0",
]

[project.scripts]
gaussian-face-train = "gaussian_face.train:main"
gaussian-face-rt = "gaussian_face.scripts.rt:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"